<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mx.com.bit01.alohaapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:text="@string/MenuP_Premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPremium"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintRight_toRightOf="@+id/textView"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.14" />

    <Button
        android:text="@string/MenuP_Instrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInstrucciones"
        app:layout_constraintLeft_toLeftOf="@+id/btnPremium"
        app:layout_constraintRight_toRightOf="@+id/btnPremium"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnPremium" />

    <Button
        android:text="@string/MenuP_Programar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAgendar"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btnInstrucciones"
        android:layout_marginStart="72dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="72dp" />

    <TextView
        android:text="@string/Aloha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="36sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchAgendar"
        android:textOn="@string/MenuP_On"
        android:textOff="@string/MenuP_Off"
        app:layout_constraintTop_toTopOf="@+id/btnAgendar"
        app:layout_constraintBottom_toBottomOf="@+id/btnAgendar"
        app:layout_constraintVertical_bias="0.49"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/btnAgendar"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/MenuP_HoraAgendadaTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblMensajeTxt"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAgendar"
        app:layout_constraintLeft_toLeftOf="@+id/btnAgendar" />

    <TextView
        android:text="@string/Aloha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblHoraMensaje"
        app:layout_constraintTop_toTopOf="@+id/lblMensajeTxt"
        app:layout_constraintBottom_toBottomOf="@+id/lblMensajeTxt"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/lblMensajeTxt"
        android:layout_marginLeft="24dp"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:text="@string/MenuP_On"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test"
        app:layout_constraintLeft_toLeftOf="@+id/btnAgendar"
        app:layout_constraintRight_toRightOf="@+id/switchAgendar"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/lblHoraMensaje"
        app:layout_constraintHorizontal_bias="0.41" />
</android.support.constraint.ConstraintLayout>
